convert/objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_N_Contact__c</fullName>
        <label>Create N Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_DPD__c</fullName>
        <label>Current DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Segmentation__c</fullName>
        <formula>if( Seasoning__c &gt;9 &amp;&amp;  Current_DPD__c &lt;=30 &amp;&amp;  Past_36_months_beginning_DPD_Min_days__c &lt;= 30 , &apos;Elite&apos;,

if( Seasoning__c &gt;9 &amp;&amp;  Current_DPD__c &lt;=30 &amp;&amp;  (Past_36_months_beginning_DPD_Min_days__c &gt;30 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &lt;= 90) , &apos;Classic&apos;,

if( Seasoning__c &gt;9 &amp;&amp;  Current_DPD__c &lt;=30 &amp;&amp;  Past_36_months_beginning_DPD_Min_days__c &gt; 90 , &apos;High Debt Defaulter&apos;,

if(Seasoning__c &gt;9 &amp;&amp; (Current_DPD__c &gt;30 &amp;&amp; Current_DPD__c &lt;= 90) &amp;&amp; (Past_36_months_beginning_DPD_Min_days__c &gt;30 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &lt;= 90),&apos;Classic&apos;,
if(Seasoning__c &gt;9 &amp;&amp; (Current_DPD__c &gt;30 &amp;&amp; Current_DPD__c &lt;= 90) &amp;&amp;  Past_36_months_beginning_DPD_Min_days__c &gt; 90 , &apos;High Debt Defaulter&apos;,
if(Seasoning__c &gt;9 &amp;&amp; Current_DPD__c &gt; 90 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c&gt;90,&apos;High Debt Defaulter&apos;,
if(Seasoning__c &lt;=9 &amp;&amp; Current_DPD__c &lt;=30 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &lt;= 30, &apos;Signature&apos;,
if(Seasoning__c &lt;=9 &amp;&amp; Current_DPD__c &lt;=30 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &gt; 90,&apos;High Debt Defaulter&apos;,
if(Seasoning__c &lt;=9 &amp;&amp; (Current_DPD__c &gt;30 &amp;&amp; Current_DPD__c &lt;= 90) &amp;&amp; (Past_36_months_beginning_DPD_Min_days__c &gt;30 &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &lt;= 90),&apos;Classic&apos;,
if(Seasoning__c &lt;=9 &amp;&amp; (Current_DPD__c &gt;30 &amp;&amp; Current_DPD__c &lt;= 90) &amp;&amp; (Past_36_months_beginning_DPD_Min_days__c &gt;30 ) &amp;&amp; Past_36_months_beginning_DPD_Min_days__c &gt; 90,&apos;High Debt Defaulter&apos;,
if(Seasoning__c &lt;=9 &amp;&amp; Current_DPD__c &gt;90 &amp;&amp;  Past_36_months_beginning_DPD_Min_days__c &gt; 90,&apos;High Debt Defaulter&apos;,&apos;&apos;)
))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cut_of_Point_Date__c</fullName>
        <label>Cut of Point Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Past_36_months_beginning_DPD_Max_days__c</fullName>
        <label>Past 36 months beginning DPD Max days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_36_months_beginning_DPD_Min_days__c</fullName>
        <label>Past 36 months beginning DPD Min days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seasoning__c</fullName>
        <label>Seasoning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Contact_Value__c</fullName>
        <label>Sum of Contact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>false</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account</fullName>
        <active>true</active>
        <label>Person Account</label>
    </recordTypes>
</CustomObject>